# tom_keck

./: .gitignore  manage.py  pyproject.toml
custom_code/: views.py
keke/: index.html  package-lock.json  package.json  vite.config.ts
keke/src/: App.tsx  config.tsx  login_panel.tsx  main.tsx  schedule_panel.tsx  target_form.tsx  theme.tsx  tom_login_panel.tsx  too_form.tsx  too_interrupt_dialog.tsx  top_bar.tsx
pieceofcake/: package-lock.json  package.json
static/keke_dist/: index.html
static/keke_dist/assets/: index-B5zSbgFY.js  index-C7U1XW1j.js  index-ChW62vHe.js  index-DjMpDIA1.js
templates/tom_keck/: keke.html  observation_form.html
tom_keck/: asgi.py  context_processors.py  keck.py  keck_api.py  settings.py  urls.py  wsgi.py
