[project]
name = "tom-keck"
version = "0.1.0"
description = "TOM for W. M. Keck Observatory"
authors = [
    {name = "tcoda@keck.hawaii.edu"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    tomtoolkit = ">=2.22"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
